Search: fix scrollbar for sphere search

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3439,12 +3439,28 @@ html {
   max-height: 24rem;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-128 {
+  max-height: 32rem;
+}
+
+.max-h-0 {
+  max-height: 0px;
+}
+
 .min-h-24 {
   min-height: 6rem;
 }
 
 .min-h-full {
   min-height: 100%;
+}
+
+.min-h-0 {
+  min-height: 0px;
 }
 
 .w-0 {
@@ -3602,6 +3618,10 @@ html {
 
 .flex-none {
   flex: none;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .shrink-0 {
